# sirin-forms

./: .dockerignore  .env.example  .gitignore  2_5454037879514766107.docx  Dockerfile  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
src/app/: __init__.py  config.py  db.py  exceptions.py  main.py
src/app/api/: deps.py  forecast.py  health.py
src/app/clients/: base.py  iiko.py  openrouter.py  weather.py
src/app/config/: __init__.py  prompt_loader.py
src/app/config/prompts/: discrepancy_analysis.yaml  forecast.yaml  recommendations.yaml
src/app/models/: common.py  forecast.py  iiko.py  inventory.py  weather.py
src/app/repositories/: base.py  forecasts.py  menu_snapshots.py  ml_models.py  products.py  sales.py  weather.py
src/app/services/: backfill.py  context_formatter.py  data_collector.py  features.py  features_weekly.py  forecast.py  inventory.py  menu_snapshot.py  ml_forecast.py  procurement.py  prompt_builder.py  trend_analysis.py
src/app/utils/: calendar.py  dt.py
src/frontend/: index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src/frontend/e2e/: 01-forecast-generate.spec.ts  02-forecast-filter-sort.spec.ts  03-plan-fact-discrepancy.spec.ts  04-inventory-load.spec.ts  05-navigation.spec.ts  06-daily-analysis.spec.ts  SCENARIOS.md  helpers.ts
src/frontend/src/: App.tsx  index.css
src/tests/: conftest.py
src/tests/api/: test_inventory_endpoint.py
src/tests/clients/: test_iiko.py  test_iiko_stop_list.py  test_openrouter.py  test_weather.py
src/tests/config/: test_settings_thresholds.py
src/tests/repositories/: test_forecasts.py  test_forecasts_plan_fact_filter.py  test_products.py  test_sales.py  test_weather.py
src/tests/services/: test_context_formatter.py  test_features_weekly.py  test_forecast.py  test_inventory.py  test_menu_snapshot.py  test_ml_forecast.py
src/tests/utils/: test_calendar.py  test_dt.py
(+38 files in other folders)
