[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurman-analytics"
version = "0.1.0"
description = "Restaurant demand forecasting system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "openai>=1.60",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "holidays>=0.40",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "joblib>=1.4",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
    "testcontainers[postgres]>=4.9",
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
markers = [
    "integration: tests requiring real external services",
]
